# ShellSensei

./: README.md  RELEASE_CHECKLIST.md  V4_PLAN.md  philosophy.md  plan.md  purpose.md  pyproject.toml
.shellsensei/: board.json  diagnostics.json  redaction_profiles.json  shellsensei.db
.shellsensei/profiles/: bashrc_test
.shellsensei/wrappers_test/: manifest.json  ss_cargo.sh  ss_cargo_2.sh  ss_cargo_3.sh  ss_cd.sh  ss_code.sh
docs/: MIGRATION_V1_TO_V2.md  how_to_use_shellsensei.md
scripts/: beta_demo.ps1  beta_demo.sh  install.ps1  install.sh
src/shellsensei/: apply.py  automate.py  benchmark.py  board.py  ci_lint.py  ci_profiles.py  cli.py  config.py  history.py  hooks.py  ide.py  intent_engine.py  llm_local.py  metrics.py  normalize.py  pack.py  phase_status.py  policy.py  policy_engine.py  quality_gate.py  repo_context.py  report.py  risk.py  storage.py  suggest.py  updater.py  v2_context.py  v2_ranker.py  v3_evaluator.py  v3_ops.py
tests/: test_apply.py  test_completion_layer.py  test_history.py  test_normalize.py  test_phase_extensions.py  test_phase_status.py  test_storage_integration.py  test_suggest.py  test_v2_foundations.py  test_v2_phases.py  test_v3_completion.py
