[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsensei"
version = "0.1.0"
description = "Local-first terminal workflow coach"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ShellSensei" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
shellsensei = "shellsensei.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
